--- a/serverless.yml
+++ b/serverless.yml
@@ -1,7 +1,7 @@
 service: sl-order-gateway
 provider:
   name: aws
-  runtime: nodejs4.3
+  runtime: nodejs10.x
   stage: ${env:STAGE}
   region: ${env:REGION}
   environment:
