agregado de dependencias, gitignore y logica handler

--- a/package.json
+++ b/package.json
@@ -4,8 +4,20 @@
     "description": "api for orders",
     "author": "",
     "license": "ISC",
+    "dependencies": {
+        "aws-lambda": "^0.1.2",
+        "aws-sdk": "^2.553.0",
+        "source-map-support": "^0.5.10"
+    },
     "devDependencies": {
-      "serverless-dotenv-plugin": "^2.4.2"
+        "@types/aws-lambda": "^8.10.17",
+        "@types/node": "^10.14.22",
+        "eslint": "^6.6.0",
+        "serverless-webpack": "^5.2.0",
+        "ts-loader": "^5.3.3",
+        "tslint": "^5.20.0",
+        "tslint-config-airbnb": "^5.11.2",
+        "typescript": "^3.2.4",
+        "webpack": "^4.29.0"
     }
-  }
-  
+}
