--- a/src/order/order.yml
+++ b/src/order/order.yml
@@ -1,11 +1,10 @@
-queue_input:
+queue_order:
   handler: src/order/handler_input/handler.inputOrder
   events:
     - http:
         path: queue_order
         method: post
         cors: true
-  package:
-    include:
-      - src/order/handler_input/handler.ts
-      - src/libs/**
+  layers:
+  - { Ref: TestLambdaLayer } 
+
