fix conf package serverless

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dependencies": {
         "aws-lambda": "^0.1.2",
         "aws-sdk": "^2.553.0",
-        "source-map-support": "^0.5.10"
+        "serverless-plugin-typescript": "^1.1.9",
+        "source-map-support": "^0.5.10",
+        "webpack-cli": "^3.3.12"
     },
     "devDependencies": {
         "@types/aws-lambda": "^8.10.17",
@@ -27,6 +29,7 @@
     },
     "scripts": {
         "offline": "serverless offline --env dev",
-        "lint": "tslint -p tsconfig.json -c tslint.json"
-      }
+        "lint": "tslint -p tsconfig.json -c tslint.json",
+        "build": "webpack"
+    }
 }
