--- a/serverless.yml
+++ b/serverless.yml
@@ -25,6 +25,7 @@ functions:
 plugins:
   - serverless-dotenv-plugin
   - serverless-offline
+  - serverless-plugin-typescript
 
 custom:
   globals:
