--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,6 +16,7 @@ jobs:
     - run: echo //registry.npmjs.org/:_authToken=${{ secrets.npm_token }} > .npmrc
     - run: npm install
     - name: Package
+      with:
         args: install
     - name: serverless deploy
       uses: serverless/github-action@master
