--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,10 +20,38 @@ jobs:
         cat > .env << EOF
         ${{ secrets.ENV }}
         EOF
-    - name: Serverless AWS authentication
-      run: sls config credentials --provider aws --key ${{ secrets.AWS_ACCESS_KEY_ID }} --secret ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    - run: npm run build
+    - run: echo ::set-env name=GITHASH::$(git rev-parse --short=10 HEAD)
+    - run: echo ::set-env name=AWS_REGION::us-east-1
+    - run: echo ::set-env name=AWS_S3_BUCKET::acamica-serverless-deployments
+    # Upload files to sentry and remove index.js.map (temp)
+    # REPLACE based on the project name in sentry
+    - run: sentry-cli --auth-token ${{ secrets.SENTRY_AUTH_TOKEN }} releases --org=acamica-com --project=${{ github.event.repository.name }} files ${{ env.GITHASH }} upload-sourcemaps --ext map --ext js ./dist --url-prefix "/var/task/" && rm dist/index.js.map
+    - name: Package
+      uses: chriscoffee/sam-github-actions@master
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: ${{ env.AWS_REGION }}
+        AWS_S3_BUCKET: ${{ env.AWS_S3_BUCKET }}
+      with:
+        args: package --template-file dist/template.yml --s3-bucket ${{ env.AWS_S3_BUCKET }} --output-template-file ${{ env.GITHASH }}.yml
+
+    - name: Upload binary to S3 bucket
+      uses: tpaschalis/s3-sync-action@master
+      env:
+        FILE: ${{ env.GITHASH }}.yml
+        AWS_REGION: ${{ env.AWS_REGION }}
+        AWS_S3_BUCKET: ${{ env.AWS_S3_BUCKET }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+    # THIS IS THE RIGHT WAY TO USE GITHUB ACTIONS WITH SERVERLESS
+    #
+    #- name: Serverless AWS authentication
+    #  run: sls config credentials --provider aws --key ${{ secrets.AWS_ACCESS_KEY_ID }} --secret ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     # Optional
     #- name: Build assets
     #  run: npm run assets-dev
-    - name: Deploy Lambda functions
-      run: sls deploy
+    #- name: Deploy Lambda functions
+    # run: sls deploy
