--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "source-map-support": "^0.5.10",
         "typescript": "^3.2.4",
         "webpack": "^4.29.0",
-        "webpack-cli": "^3.3.12"
+        "webpack-cli": "^3.3.12",
+        "serverless-offline": "^6.5.0"
     },
     "devDependencies": {
         "@types/aws-lambda": "^8.10.17",
@@ -21,7 +22,6 @@
         "chai": "^4.2.0",
         "eslint": "^6.6.0",
         "mocha": "^8.1.1",
-        "serverless-offline": "^6.5.0",
         "sinon": "^9.0.3",
         "ts-loader": "^5.3.3",
         "tslint": "^5.20.0",
