--- a/resources/role.yml
+++ b/resources/role.yml
@@ -1,10 +1,10 @@
 Resources:
   DeliveryStreamRole:
-    Type: "AWS::IAM::Role"
+    Type: AWS::IAM::Role
     DeletionPolicy: Delete
     Properties:
       RoleName: ${self:custom.globals.role}
       ManagedPolicyArns:
-        - "arn:aws:iam::aws:policy/AmazonS3FullAccess"
-        - "arn:aws:iam::aws:policy/AmazonESFullAccess"
-        - "arn:aws:iam::aws:policy/CloudWatchLogsFullAccess"
+        - arn:aws:iam::aws:policy/CloudWatchLogsFullAccess
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+        - arn:aws:iam::aws:policy/AmazonSQSFullAccess
