--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "chai": "^4.2.0",
         "eslint": "^6.6.0",
         "mocha": "^8.1.1",
+        "serverless-sam": "^0.2.0",
         "sinon": "^9.0.3",
         "ts-loader": "^5.3.3",
         "tslint": "^5.20.0",
