--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "source-map-support": "^0.5.10",
         "typescript": "^3.2.4",
         "webpack": "^4.29.0",
-        "webpack-cli": "^3.3.12"
+        "webpack-cli": "^3.3.12",
+        "serverless-sam": "^0.2.0"
     },
     "devDependencies": {
         "@types/aws-lambda": "^8.10.17",
@@ -24,7 +25,6 @@
         "chai": "^4.2.0",
         "eslint": "^6.6.0",
         "mocha": "^8.1.1",
-        "serverless-sam": "^0.2.0",
         "sinon": "^9.0.3",
         "ts-loader": "^5.3.3",
         "tslint": "^5.20.0",
@@ -36,6 +36,8 @@
         "offline": "serverless offline --env dev",
         "lint": "tslint -p tsconfig.json -c tslint.json",
         "build": "serverless webpack",
-        "postbuild": "mkdir dist && cp .webpack/queue_order/src/order/* dist/ && cp template.yml dist/"
+        "postbuild": "mkdir dist && cp .webpack/queue_order/src/order/* dist/ && cp template.yml dist/",
+        "generate-template": "node helpers/generateTemplateFromJson.js",
+        "update-sam-template": "node helpers/updateSamTemplate.js $VAR"
     }
 }
