--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,7 +43,7 @@ jobs:
         args: package --template-file dist/template.yml --s3-bucket ${{ env.AWS_S3_BUCKET }} --output-template-file packaged-template.yml
     #Editar el template convertido con la data devuelta desde package 
     - name:  Edit Template
-    - run: npm run generate-template ${{ env.GITHASH }}
+      run: npm run generate-template ${{ env.GITHASH }}
     - name: Upload binary to S3 bucket
       uses: tpaschalis/s3-sync-action@master
       env:
@@ -60,7 +60,7 @@ jobs:
         AWS_DEFAULT_REGION: ${{ env.AWS_REGION}}
         STACK_NAME: sl-order-gateway-new4
       with:
-        args: deploy --template-file packaged.yaml --stack-name ${{ secrets.STACK_NAME }} --capabilities CAPABILITY_IAM
+        args: deploy --template-file ${{ env.GITHASH }}.yml --stack-name ${{ secrets.STACK_NAME }} --capabilities CAPABILITY_IAM
 
 
     # THIS IS THE RIGHT WAY TO USE GITHUB ACTIONS WITH SERVERLESS
