--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,7 +23,7 @@ jobs:
         ${{ secrets.ENV }}
         EOF
     - run: npm run build # ESTE HAY Q EDITAR XQ EL WEBPACK NO SE HACE MAS
-    - run: sls sam export --output ./sam-template.yml
+    - run: sls sam export --output templates/sam-template.yml
     - run: sls package --config=serverless.yml --package=dist
     - run: npm run update-sam-template
     - run: echo ::set-env name=GITHASH::$(git rev-parse --short=10 HEAD)
@@ -40,7 +40,7 @@ jobs:
         AWS_DEFAULT_REGION: ${{ env.AWS_REGION }}
         AWS_S3_BUCKET: ${{ env.AWS_S3_BUCKET }}
       with:
-        args: package --template-file sam-template-edited.yml --s3-bucket ${{ env.AWS_S3_BUCKET }} --output-template-file packaged-template.yml
+        args: package --template-file sam-template-edited.yml --s3-bucket ${{ env.AWS_S3_BUCKET }} --output-template-file templates/packaged-template.yml
     #Editar el template convertido con la data devuelta desde package 
     - name:  Edit Template
       run: npm run generate-template ${{ env.GITHASH }}
@@ -60,7 +60,7 @@ jobs:
         AWS_DEFAULT_REGION: ${{ env.AWS_REGION}}
         STACK_NAME: sl-order-gateway-new4
       with:
-        args: deploy --template-file ${{ env.GITHASH }}.yml --stack-name ${{ secrets.STACK_NAME }} --capabilities CAPABILITY_IAM
+        args: deploy --template-file templates/${{ env.GITHASH }}.yml --stack-name ${{ secrets.STACK_NAME }} --capabilities CAPABILITY_IAM
 
 
     # THIS IS THE RIGHT WAY TO USE GITHUB ACTIONS WITH SERVERLESS
