--- a/package.json
+++ b/package.json
@@ -7,16 +7,11 @@
     "dependencies": {
         "aws-lambda": "^0.1.2",
         "aws-sdk": "^2.553.0",
-        "js-yaml": "^3.14.0",
-        "json-to-pretty-yaml": "^1.2.2",
         "serverless-dotenv-plugin": "^3.0.0",
-        "serverless-offline": "^6.5.0",
         "serverless-plugin-typescript": "^1.1.9",
         "serverless-webpack": "^5.2.0",
         "source-map-support": "^0.5.10",
         "typescript": "^3.2.4",
-        "webpack": "^4.29.0",
-        "webpack-cli": "^3.3.12",
         "serverless-sam": "^0.2.0"
     },
     "devDependencies": {
@@ -30,12 +25,16 @@
         "tslint": "^5.20.0",
         "tslint-config-airbnb": "^5.11.2",
         "typescript": "^3.2.4",
-        "webpack": "^4.29.0"
+        "webpack": "^4.29.0",
+        "serverless-offline": "^6.5.0",
+        "webpack-cli": "^3.3.12",
+        "js-yaml": "^3.14.0",
+        "json-to-pretty-yaml": "^1.2.2"
     },
     "scripts": {
         "offline": "serverless offline --env dev",
         "lint": "tslint -p tsconfig.json -c tslint.json",
-        "build": " aws cloudformation package     --template-file ./sam-template.yml  --s3-bucket serverless-bucket-order   --output-template-file packaged-template.yml",
+        "build": "sls package --config=serverless.yml --package=dist",
         "postbuild": "mkdir dist && cp .webpack/queueOrder/src/order/* dist/",
         "generate-template": "node helpers/generateTemplateFromJson.js",
         "update-sam-template": "node helpers/updateSamTemplate.js $VAR"
