--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "offline": "serverless offline --env dev",
         "lint": "tslint -p tsconfig.json -c tslint.json",
         "build": "sls package --config=serverless.yml --package=dist",
-        "postbuild": "mkdir dist && cp .webpack/queueOrder/src/order/* dist/",
+        "postbuild": "cp .webpack/queueOrder/src/order/* dist/",
         "generate-template": "node helpers/generateTemplateFromJson.js",
         "update-sam-template": "node helpers/updateSamTemplate.js $VAR"
     }
