--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,7 +24,7 @@ jobs:
         EOF
     - run: npm run build # ESTE HAY Q EDITAR XQ EL WEBPACK NO SE HACE MAS
     #- run: sls sam export --output dist/sam-template.yml
-    - run: rm .serverless/queueOrder.zip && cp dist/queueOrder.zip .serverless/
+    - run: cp -r .webpack/queueOrder/src/order/* dist/
     #- run: sls package --config serverless.yml --package dist
     #- run: npm run update-sam-template
     - run: echo ::set-env name=GITHASH::$(git rev-parse --short=10 HEAD)
@@ -41,7 +41,7 @@ jobs:
         AWS_DEFAULT_REGION: ${{ env.AWS_REGION }}
         AWS_S3_BUCKET: ${{ env.AWS_S3_BUCKET }}
       with:
-        args: package --template-file sam-template.yml --s3-bucket ${{ env.AWS_S3_BUCKET }} --output-template-file ${{ env.GITHASH}}.yml
+        args: package --template-file dist/sam-template.yml --s3-bucket ${{ env.AWS_S3_BUCKET }} --output-template-file ${{ env.GITHASH}}.yml
     #Editar el template convertido con la data devuelta desde package 
     #- name:  Edit Template
     # run: npm run generate-template ${{ env.GITHASH }}
