create dir from build

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "scripts": {
         "offline": "serverless offline --env dev",
         "lint": "tslint -p tsconfig.json -c tslint.json",
-        "build": "sls sam export --output dist/sam-template.yml",
+        "build": "mkdir dist && sls sam export --output dist/sam-template.yml",
         "postbuild": "sls webpack",
         "generate-template": "node helpers/generateTemplateFromJson.js",
         "update-sam-template": "node helpers/updateSamTemplate.js $VAR"
