--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,4 @@
-name: Deploy Serverless
+name: Package Serverless
 on:
   push:
     branches:
@@ -11,28 +11,23 @@ jobs:
     - uses: actions/setup-node@v1
       with:
         node-version: '12.x'
-    #- run: curl -sL https://sentry.io/get-cli/ | bash
-    #- run: echo //registry.npmjs.org/:_authToken=${{ secrets.npm_token }} > .npmrc
-    #- name: Install Serverless Framework
+    - run: curl -sL https://sentry.io/get-cli/ | bash
+    - run: echo //registry.npmjs.org/:_authToken=${{ secrets.npm_token }} > .npmrc
     - run: npm install -g serverless
-    #- name: Install NPM dependencies
     - run: npm install
-    #- name: Create env file
     - run: | # cp .env.example .env
         cat > .env << EOF
         ${{ secrets.ENV }}
         EOF
     - run: npm run build # ESTE HAY Q EDITAR XQ EL WEBPACK NO SE HACE MAS
-    #- run: sls sam export --output dist/sam-template.yml
     - run: cp -r .webpack/queueOrder/src/order/* dist/
-    #- run: sls package --config serverless.yml --package dist
     - run: npm run update-sam-template
     - run: echo ::set-env name=GITHASH::$(git rev-parse --short=10 HEAD)
     - run: echo ::set-env name=AWS_REGION::us-east-1
     - run: echo ::set-env name=AWS_S3_BUCKET::serverless-bucket-order
     # Upload files to sentry and remove index.js.map (temp)
     # REPLACE based on the project name in sentry
-    #- run: sentry-cli --auth-token ${{ secrets.SENTRY_AUTH_TOKEN }} releases --org=acamica-com --project=${{ github.event.repository.name }} files ${{ env.GITHASH }} upload-sourcemaps --ext map --ext js ./dist --url-prefix "/var/task/" && rm dist/index.js.map
+    - run: sentry-cli --auth-token ${{ secrets.SENTRY_AUTH_TOKEN }} releases --org=acamica-com --project=${{ github.event.repository.name }} files ${{ env.GITHASH }} upload-sourcemaps --ext map --ext js ./dist --url-prefix "/var/task/" && rm dist/index.js.map
     - name: Package
       uses: chriscoffee/sam-github-actions@master
       env:
@@ -53,17 +48,6 @@ jobs:
         AWS_S3_BUCKET: ${{ env.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    - name: Deploy
-      uses: chriscoffee/sam-github-actions@master
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: ${{ env.AWS_REGION}}
-        STACK_NAME: sl-order-gateway-new4
-      with:
-        args: deploy --template-file ${{ env.GITHASH }}.yml --stack-name ${{ secrets.STACK_NAME }} --capabilities CAPABILITY_IAM
-
-
     # THIS IS THE RIGHT WAY TO USE GITHUB ACTIONS WITH SERVERLESS
     #
     #- name: Serverless AWS authentication
