add apibasepath on helper

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dependencies": {
         "aws-lambda": "^0.1.2",
         "aws-sdk": "^2.553.0",
+        "js-yaml": "^3.14.0",
+        "json-to-pretty-yaml": "^1.2.2",
         "lodash.forin": "^4.4.0",
         "lodash.isobject": "^3.0.2",
         "serverless-dotenv-plugin": "^3.0.0",
@@ -14,9 +16,7 @@
         "serverless-sam": "^0.2.0",
         "serverless-webpack": "^5.2.0",
         "source-map-support": "^0.5.10",
-        "typescript": "^3.2.4",
-        "js-yaml": "^3.14.0",
-        "json-to-pretty-yaml": "^1.2.2"
+        "typescript": "^3.2.4"
     },
     "devDependencies": {
         "@types/aws-lambda": "^8.10.17",
