--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "serverless-sam": "^0.2.0",
         "serverless-webpack": "^5.2.0",
         "source-map-support": "^0.5.10",
-        "typescript": "^3.2.4"
+        "typescript": "^3.2.4",
+        "dotenv": "^8.2.0"
     },
     "devDependencies": {
         "@types/aws-lambda": "^8.10.17",
