--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,8 +11,8 @@ jobs:
     - uses: actions/setup-node@v1
       with:
         node-version: '12.x'
-    - run: curl -sL https://sentry.io/get-cli/ | bash
-    - run: echo //registry.npmjs.org/:_authToken=${{ secrets.npm_token }} > .npmrc
+    #- run: curl -sL https://sentry.io/get-cli/ | bash
+    #- run: echo //registry.npmjs.org/:_authToken=${{ secrets.npm_token }} > .npmrc
     - run: npm install -g serverless
     - run: npm install
     - run: | # cp .env.example .env
@@ -25,10 +25,10 @@ jobs:
     - run: npm run update-sam-template
     - run: echo ::set-env name=GITHASH::$(git rev-parse --short=10 HEAD)
     - run: echo ::set-env name=AWS_REGION::us-east-1
-    - run: echo ::set-env name=AWS_S3_BUCKET::acamica-serverless-deployments
+    - run: echo ::set-env name=AWS_S3_BUCKET::serverless-bucket-order
     # Upload files to sentry and remove index.js.map (temp)
     # REPLACE based on the project name in sentry
-    - run: sentry-cli --auth-token ${{ secrets.SENTRY_AUTH_TOKEN }} releases --org=acamica-com --project=${{ github.event.repository.name }} files ${{ env.GITHASH }} upload-sourcemaps --ext map --ext js ./dist/**/**/ --url-prefix "/var/task/" && rm dist/**/**/index.js.map
+    #- run: sentry-cli --auth-token ${{ secrets.SENTRY_AUTH_TOKEN }} releases --org=acamica-com --project=${{ github.event.repository.name }} files ${{ env.GITHASH }} upload-sourcemaps --ext map --ext js ./dist/**/**/ --url-prefix "/var/task/" && rm dist/**/**/index.js.map
     - name: Package
       uses: chriscoffee/sam-github-actions@master
       env:
