--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "dependencies": {
         "aws-lambda": "^0.1.2",
         "aws-sdk": "^2.553.0",
+        "dotenv": "^8.2.0",
         "js-yaml": "^3.14.0",
         "json-to-pretty-yaml": "^1.2.2",
         "lodash.forin": "^4.4.0",
         "lodash.isobject": "^3.0.2",
+        "serverless": "^1.80.0",
         "serverless-dotenv-plugin": "^3.0.0",
         "serverless-plugin-typescript": "^1.1.9",
         "serverless-sam": "^0.2.0",
         "serverless-webpack": "^5.2.0",
         "source-map-support": "^0.5.10",
-        "typescript": "^3.2.4",
-        "dotenv": "^8.2.0"
+        "typescript": "^3.2.4"
     },
     "devDependencies": {
         "@types/aws-lambda": "^8.10.17",
